cluster/realmic/home.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: home
  labels:
    app: home
    service: web
spec:
  replicas: 1
  revisionHistoryLimit: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
  selector:
    matchLabels:
      app: home
  template:
    metadata:
      labels:
        app: home
        service: web
    spec:
      securityContext:
        runAsUser: 101
        runAsGroup: 101
      volumes:
        - name: tmp
          emptyDir:
            medium: Memory
        - name: cache
          emptyDir:
            medium: Memory
      containers:
        - name: home
          image: ghcr.io/realliance/legacy-realmic-portal:main@sha256:9bcf7483686b8202c001043048a2b8c2c7e6f1bc8ed34c0c4fb3291f132834c6
          ports:
            - containerPort: 8080
              protocol: TCP
          securityContext:
            readOnlyRootFilesystem: true
            runAsUser: 101
            runAsGroup: 101
          volumeMounts:
            - mountPath: /tmp
              name: tmp
            - mountPath: /var/cache/nginx
              name: cache
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 3
            periodSeconds: 3
          lifecycle:
            preStop:
              exec:
                command: [/usr/sbin/nginx, -s, quit]
---
apiVersion: v1
kind: Service
metadata:
  name: home
  labels:
    service: web
spec:
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: home
