cluster/realmic/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: realmic-ingress
  labels:
    service: web
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: traefik-strip-csp@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: legacy.realliance.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: home
                port:
                  number: 80
